# cdek-rag

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: config.py  graph.py  knowledge.py  llm.py  main.py  schemas.py
tests/: test_graph.py  test_knowledge.py
